Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Grammar.y
-----------------------------------------------------------------------------


rule 29 is unused
rule 30 is unused
rule 31 is unused
rule 32 is unused
rule 33 is unused
rule 34 is unused
rule 35 is unused
rule 36 is unused
rule 37 is unused
rule 38 is unused
rule 39 is unused
rule 40 is unused
rule 41 is unused
rule 42 is unused
rule 43 is unused
rule 44 is unused
rule 45 is unused
rule 46 is unused
rule 47 is unused
rule 48 is unused
rule 49 is unused
rule 50 is unused
rule 51 is unused
rule 52 is unused
rule 53 is unused
rule 54 is unused
rule 55 is unused
rule 56 is unused
rule 57 is unused
rule 58 is unused
rule 59 is unused
rule 60 is unused
rule 61 is unused
rule 62 is unused
rule 63 is unused
rule 64 is unused
rule 65 is unused
rule 66 is unused

terminal '=' is unused
terminal ';' is unused
terminal '->' is unused
terminal number is unused
terminal boolean is unused
terminal with is unused
terminal do is unused
terminal end is unused
terminal if is unused
terminal then is unused
terminal else is unused
terminal while is unused
terminal for is unused
terminal repeat is unused
terminal begin is unused
terminal return is unused
terminal func is unused
terminal times is unused
terminal program is unused
terminal str is unused
terminal writeln is unused
terminal write is unused
terminal read is unused
terminal by is unused
terminal from is unused
terminal to is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Expr                               (0)
	Expr -> Expr or Expr                               (1)
	Expr -> Expr and Expr                              (2)
	Expr -> Expr '==' Expr                             (3)
	Expr -> Expr '/=' Expr                             (4)
	Expr -> Expr '<' Expr                              (5)
	Expr -> Expr '>' Expr                              (6)
	Expr -> Expr '<=' Expr                             (7)
	Expr -> Expr '>=' Expr                             (8)
	Expr -> Expr '+' Expr                              (9)
	Expr -> Expr '-' Expr                              (10)
	Expr -> Expr '*' Expr                              (11)
	Expr -> Expr '/' Expr                              (12)
	Expr -> Expr '%' Expr                              (13)
	Expr -> Expr div Expr                              (14)
	Expr -> Expr mod Expr                              (15)
	Expr -> '(' Expr ')'                               (16)
	Expr -> not Expr                                   (17)
	Expr -> '-' Expr                                   (18)
	Expr -> integer                                    (19)
	Expr -> floating                                   (20)
	Expr -> true                                       (21)
	Expr -> false                                      (22)
	Expr -> identifier                                 (23)
	Expr -> Funcion                                    (24)
	Funcion -> identifier '(' ')'                      (25)
	Funcion -> identifier '(' Args ')'                 (26)
	Args -> Expr                                       (27)
	Args -> Args ',' Expr                              (28)
	Leer -> read identifier                            (29)
	Escribir -> write ArgW                             (30)
	EscribirLn -> writeln ArgW                         (31)
	ExprS -> Expr                                      (32)
	ExprS -> str                                       (33)
	ArgW -> ExprS                                      (34)
	ArgW -> ArgW ',' ExprS                             (35)
	Asig -> identifier '=' Expr                        (36)
	Tipo -> number                                     (37)
	Tipo -> boolean                                    (38)
	ListaI -> identifier                               (39)
	ListaI -> ListaI ',' identifier                    (40)
	Decl -> Tipo Asig                                  (41)
	Decl -> Tipo ListaI                                (42)
	ListaD -> Decl ';'                                 (43)
	ListaD -> ListaD Decl ';'                          (44)
	Ins -> Asig                                        (45)
	Ins -> Funcion                                     (46)
	Ins -> Leer                                        (47)
	Ins -> Escribir                                    (48)
	Ins -> EscribirLn                                  (49)
	ListaIn -> Ins ';'                                 (50)
	ListaIn -> ListaIn Ins ';'                         (51)
	BWith -> with do Bloque end ';'                    (52)
	BWith -> with ListaD do Bloque end ';'             (53)
	BIf -> if Expr then Bloque else Bloque end ';'     (54)
	BIf -> if Expr then Bloque end ';'                 (55)
	BWhile -> while Expr then Bloque end ';'           (56)
	BFor -> for identifier from Expr to Expr do Bloque end ';'   (57)
	BFor -> for identifier from Expr to Expr by Expr do Bloque end ';'   (58)
	BRep -> repeat Expr times Bloque end ';'           (59)
	Bloque -> AnidS                                    (60)
	Bloque -> Bloque AnidS                             (61)
	AnidS -> BIf                                       (62)
	AnidS -> BWith                                     (63)
	AnidS -> BWhile                                    (64)
	AnidS -> BFor                                      (65)
	AnidS -> BRep                                      (66)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'%'            { (\(Modex _,_)        -> Modex _) }
	'/'            { (\(Divex _,_)         -> Divex _) }
	'*'            { (\(Mult _,_)           -> Mult _) }
	'-'            { (\(Minus _,_)          -> Minus _) }
	')'            { (\(CloseP _,_)         -> CloseP _) }
	'('            { (\(OpenP _,_)          -> OpenP _) }
	'+'            { (\(Plus _,_)           -> Plus _) }
	'='            { (\(Def _,_)            -> Def _) }
	';'            { (\(SemiColon _,_)      -> SemiColon _) }
	','            { (\(Comma _,_)          -> Comma _) }
	'<'            { (\(Less _,_)           -> Less _) }
	'>'            { (\(More _,_)           -> More _) }
	'=='           { (\(Eq _,_)             -> Eq _) }
	'/='           { (\(Neq _,_)            -> Neq _) }
	'>='           { (\(Moreq _,_)          -> Moreq _) }
	'<='           { (\(Lesseq _,_)         -> Lesseq _) }
	'->'           { (\(Arrow _,_)          -> Arrow _) }
	not            { (\(Not _,_)            -> Not _) }
	and            { (\(And _,_)            -> And _) }
	or             { (\(Or _,_)             -> Or _) }
	div            { (\(Div _,_)            -> Div _) }
	mod            { (\(Mod _,_)            -> Mod _) }
	number         { (\(Number _,_)         -> Number _) }
	boolean        { (\(Boolean _,_)        -> Boolean _) }
	true           { (\(True' _,_)          -> True' _) }
	false          { (\(False' _,_)         -> False' _) }
	with           { (\(With _,_)           -> With _) }
	do             { (\(Do _,_)             -> Do _) }
	end            { (\(End _,_)            -> End _) }
	if             { (\(If _,_)             -> If _) }
	then           { (\(Then _,_)           -> Then _) }
	else           { (\(Else _,_)           -> Else _) }
	while          { (\(While _,_)          -> While _) }
	for            { (\(For _,_)            -> For _) }
	repeat         { (\(Repeat _,_)         -> Repeat _) }
	begin          { (\(Begin _,_)          -> Begin _) }
	return         { (\(Return _,_)         -> Return _) }
	func           { (\(Func _,_)           -> Func _) }
	times          { (\(Times _,_)          -> Times _) }
	program        { (\(Program _,_)        -> Program _) }
	integer        { (\(Integer _ ,_)     -> Integer _) }
	floating       { (\(Floating _ ,_)    -> FLoating _) }
	str            { (\(Str _,_)            -> Str _) }
	identifier     { (\(Identifier _,_)     -> Identifier _) }
	writeln        { (\(WriteLn _,_)        -> WriteLn _) }
	write          { (\(Write _,_)          -> Write _) }
	read           { (\(Read _, _) -> Read _) }
	by             { (\(By _, _) -> By _) }
	from           { (\(From _, _) -> From _) }
	to             { (\(To _, _) -> To _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Expr            rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
	Funcion         rules 25, 26
	Args            rules 27, 28
	Leer            rule  29
	Escribir        rule  30
	EscribirLn      rule  31
	ExprS           rules 32, 33
	ArgW            rules 34, 35
	Asig            rule  36
	Tipo            rules 37, 38
	ListaI          rules 39, 40
	Decl            rules 41, 42
	ListaD          rules 43, 44
	Ins             rules 45, 46, 47, 48, 49
	ListaIn         rules 50, 51
	BWith           rules 52, 53
	BIf             rules 54, 55
	BWhile          rule  56
	BFor            rules 57, 58
	BRep            rule  59
	Bloque          rules 60, 61
	AnidS           rules 62, 63, 64, 65, 66

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 12
	Funcion        goto state 3

State 1


	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 2
	Funcion        goto state 3

State 2

	Expr -> Expr . or Expr                              (rule 1)
	Expr -> Expr . and Expr                             (rule 2)
	Expr -> Expr . '==' Expr                            (rule 3)
	Expr -> Expr . '/=' Expr                            (rule 4)
	Expr -> Expr . '<' Expr                             (rule 5)
	Expr -> Expr . '>' Expr                             (rule 6)
	Expr -> Expr . '<=' Expr                            (rule 7)
	Expr -> Expr . '>=' Expr                            (rule 8)
	Expr -> Expr . '+' Expr                             (rule 9)
	Expr -> Expr . '-' Expr                             (rule 10)
	Expr -> Expr . '*' Expr                             (rule 11)
	Expr -> Expr . '/' Expr                             (rule 12)
	Expr -> Expr . '%' Expr                             (rule 13)
	Expr -> Expr . div Expr                             (rule 14)
	Expr -> Expr . mod Expr                             (rule 15)

	'%'            shift, and enter state 13
	'/'            shift, and enter state 14
	'*'            shift, and enter state 15
	'-'            shift, and enter state 16
	'+'            shift, and enter state 17
	'<'            shift, and enter state 18
	'>'            shift, and enter state 19
	'=='           shift, and enter state 20
	'/='           shift, and enter state 21
	'>='           shift, and enter state 22
	'<='           shift, and enter state 23
	and            shift, and enter state 24
	or             shift, and enter state 25
	div            shift, and enter state 26
	mod            shift, and enter state 27


State 3

	Expr -> Funcion .                                   (rule 24)

	'%'            reduce using rule 24
	'/'            reduce using rule 24
	'*'            reduce using rule 24
	'-'            reduce using rule 24
	')'            reduce using rule 24
	'+'            reduce using rule 24
	','            reduce using rule 24
	'<'            reduce using rule 24
	'>'            reduce using rule 24
	'=='           reduce using rule 24
	'/='           reduce using rule 24
	'>='           reduce using rule 24
	'<='           reduce using rule 24
	and            reduce using rule 24
	or             reduce using rule 24
	div            reduce using rule 24
	mod            reduce using rule 24
	%eof           reduce using rule 24


State 4

	Expr -> '-' . Expr                                  (rule 18)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 31
	Funcion        goto state 3

State 5

	Expr -> '(' . Expr ')'                              (rule 16)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 30
	Funcion        goto state 3

State 6

	Expr -> not . Expr                                  (rule 17)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 29
	Funcion        goto state 3

State 7

	Expr -> true .                                      (rule 21)

	'%'            reduce using rule 21
	'/'            reduce using rule 21
	'*'            reduce using rule 21
	'-'            reduce using rule 21
	')'            reduce using rule 21
	'+'            reduce using rule 21
	','            reduce using rule 21
	'<'            reduce using rule 21
	'>'            reduce using rule 21
	'=='           reduce using rule 21
	'/='           reduce using rule 21
	'>='           reduce using rule 21
	'<='           reduce using rule 21
	and            reduce using rule 21
	or             reduce using rule 21
	div            reduce using rule 21
	mod            reduce using rule 21
	%eof           reduce using rule 21


State 8

	Expr -> false .                                     (rule 22)

	'%'            reduce using rule 22
	'/'            reduce using rule 22
	'*'            reduce using rule 22
	'-'            reduce using rule 22
	')'            reduce using rule 22
	'+'            reduce using rule 22
	','            reduce using rule 22
	'<'            reduce using rule 22
	'>'            reduce using rule 22
	'=='           reduce using rule 22
	'/='           reduce using rule 22
	'>='           reduce using rule 22
	'<='           reduce using rule 22
	and            reduce using rule 22
	or             reduce using rule 22
	div            reduce using rule 22
	mod            reduce using rule 22
	%eof           reduce using rule 22


State 9

	Expr -> integer .                                   (rule 19)

	'%'            reduce using rule 19
	'/'            reduce using rule 19
	'*'            reduce using rule 19
	'-'            reduce using rule 19
	')'            reduce using rule 19
	'+'            reduce using rule 19
	','            reduce using rule 19
	'<'            reduce using rule 19
	'>'            reduce using rule 19
	'=='           reduce using rule 19
	'/='           reduce using rule 19
	'>='           reduce using rule 19
	'<='           reduce using rule 19
	and            reduce using rule 19
	or             reduce using rule 19
	div            reduce using rule 19
	mod            reduce using rule 19
	%eof           reduce using rule 19


State 10

	Expr -> floating .                                  (rule 20)

	'%'            reduce using rule 20
	'/'            reduce using rule 20
	'*'            reduce using rule 20
	'-'            reduce using rule 20
	')'            reduce using rule 20
	'+'            reduce using rule 20
	','            reduce using rule 20
	'<'            reduce using rule 20
	'>'            reduce using rule 20
	'=='           reduce using rule 20
	'/='           reduce using rule 20
	'>='           reduce using rule 20
	'<='           reduce using rule 20
	and            reduce using rule 20
	or             reduce using rule 20
	div            reduce using rule 20
	mod            reduce using rule 20
	%eof           reduce using rule 20


State 11

	Expr -> identifier .                                (rule 23)
	Funcion -> identifier . '(' ')'                     (rule 25)
	Funcion -> identifier . '(' Args ')'                (rule 26)

	'%'            reduce using rule 23
	'/'            reduce using rule 23
	'*'            reduce using rule 23
	'-'            reduce using rule 23
	')'            reduce using rule 23
	'('            shift, and enter state 28
	'+'            reduce using rule 23
	','            reduce using rule 23
	'<'            reduce using rule 23
	'>'            reduce using rule 23
	'=='           reduce using rule 23
	'/='           reduce using rule 23
	'>='           reduce using rule 23
	'<='           reduce using rule 23
	and            reduce using rule 23
	or             reduce using rule 23
	div            reduce using rule 23
	mod            reduce using rule 23
	%eof           reduce using rule 23


State 12

	%start_parse -> Expr .                              (rule 0)
	Expr -> Expr . or Expr                              (rule 1)
	Expr -> Expr . and Expr                             (rule 2)
	Expr -> Expr . '==' Expr                            (rule 3)
	Expr -> Expr . '/=' Expr                            (rule 4)
	Expr -> Expr . '<' Expr                             (rule 5)
	Expr -> Expr . '>' Expr                             (rule 6)
	Expr -> Expr . '<=' Expr                            (rule 7)
	Expr -> Expr . '>=' Expr                            (rule 8)
	Expr -> Expr . '+' Expr                             (rule 9)
	Expr -> Expr . '-' Expr                             (rule 10)
	Expr -> Expr . '*' Expr                             (rule 11)
	Expr -> Expr . '/' Expr                             (rule 12)
	Expr -> Expr . '%' Expr                             (rule 13)
	Expr -> Expr . div Expr                             (rule 14)
	Expr -> Expr . mod Expr                             (rule 15)

	'%'            shift, and enter state 13
	'/'            shift, and enter state 14
	'*'            shift, and enter state 15
	'-'            shift, and enter state 16
	'+'            shift, and enter state 17
	'<'            shift, and enter state 18
	'>'            shift, and enter state 19
	'=='           shift, and enter state 20
	'/='           shift, and enter state 21
	'>='           shift, and enter state 22
	'<='           shift, and enter state 23
	and            shift, and enter state 24
	or             shift, and enter state 25
	div            shift, and enter state 26
	mod            shift, and enter state 27
	%eof           accept


State 13

	Expr -> Expr '%' . Expr                             (rule 13)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 50
	Funcion        goto state 3

State 14

	Expr -> Expr '/' . Expr                             (rule 12)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 49
	Funcion        goto state 3

State 15

	Expr -> Expr '*' . Expr                             (rule 11)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 48
	Funcion        goto state 3

State 16

	Expr -> Expr '-' . Expr                             (rule 10)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 47
	Funcion        goto state 3

State 17

	Expr -> Expr '+' . Expr                             (rule 9)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 46
	Funcion        goto state 3

State 18

	Expr -> Expr '<' . Expr                             (rule 5)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 45
	Funcion        goto state 3

State 19

	Expr -> Expr '>' . Expr                             (rule 6)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 44
	Funcion        goto state 3

State 20

	Expr -> Expr '==' . Expr                            (rule 3)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 43
	Funcion        goto state 3

State 21

	Expr -> Expr '/=' . Expr                            (rule 4)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 42
	Funcion        goto state 3

State 22

	Expr -> Expr '>=' . Expr                            (rule 8)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 41
	Funcion        goto state 3

State 23

	Expr -> Expr '<=' . Expr                            (rule 7)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 40
	Funcion        goto state 3

State 24

	Expr -> Expr and . Expr                             (rule 2)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 39
	Funcion        goto state 3

State 25

	Expr -> Expr or . Expr                              (rule 1)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 38
	Funcion        goto state 3

State 26

	Expr -> Expr div . Expr                             (rule 14)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 37
	Funcion        goto state 3

State 27

	Expr -> Expr mod . Expr                             (rule 15)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 36
	Funcion        goto state 3

State 28

	Funcion -> identifier '(' . ')'                     (rule 25)
	Funcion -> identifier '(' . Args ')'                (rule 26)

	'-'            shift, and enter state 4
	')'            shift, and enter state 35
	'('            shift, and enter state 5
	not            shift, and enter state 6
	true           shift, and enter state 7
	false          shift, and enter state 8
	integer        shift, and enter state 9
	floating       shift, and enter state 10
	identifier     shift, and enter state 11

	Expr           goto state 33
	Funcion        goto state 3
	Args           goto state 34

State 29

	Expr -> Expr . or Expr                              (rule 1)
	Expr -> Expr . and Expr                             (rule 2)
	Expr -> Expr . '==' Expr                            (rule 3)
	Expr -> Expr . '/=' Expr                            (rule 4)
	Expr -> Expr . '<' Expr                             (rule 5)
	Expr -> Expr . '>' Expr                             (rule 6)
	Expr -> Expr . '<=' Expr                            (rule 7)
	Expr -> Expr . '>=' Expr                            (rule 8)
	Expr -> Expr . '+' Expr                             (rule 9)
	Expr -> Expr . '-' Expr                             (rule 10)
	Expr -> Expr . '*' Expr                             (rule 11)
	Expr -> Expr . '/' Expr                             (rule 12)
	Expr -> Expr . '%' Expr                             (rule 13)
	Expr -> Expr . div Expr                             (rule 14)
	Expr -> Expr . mod Expr                             (rule 15)
	Expr -> not Expr .                                  (rule 17)

	'%'            reduce using rule 17
	'/'            reduce using rule 17
	'*'            reduce using rule 17
	'-'            reduce using rule 17
	')'            reduce using rule 17
	'+'            reduce using rule 17
	','            reduce using rule 17
	'<'            reduce using rule 17
	'>'            reduce using rule 17
	'=='           reduce using rule 17
	'/='           reduce using rule 17
	'>='           reduce using rule 17
	'<='           reduce using rule 17
	and            reduce using rule 17
	or             reduce using rule 17
	div            reduce using rule 17
	mod            reduce using rule 17
	%eof           reduce using rule 17


State 30
